// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AphroditeAdapter LTR global sheet flushes and purges global styles from the DOM 1`] = `
"body {margin: 0px !important;}
html {height: 100% !important;}
a {color: red !important;}
a:hover {color: darkred !important;}
a:focus {color: lightred !important;}
ul {margin: 0px !important;}
ul > li {margin: 0px !important;}
@media (max-width: 500px) {ul {margin: 20px !important;}}"
`;

exports[`AphroditeAdapter LTR global sheet flushes and purges global styles from the DOM 2`] = `"globals_5ijnvn"`;

exports[`AphroditeAdapter LTR global sheet flushes and purges global styles from the DOM 3`] = `""`;

exports[`AphroditeAdapter LTR style sheet converts unified syntax to native syntax and transforms to a class name 1`] = `
"@font-face {font-family: Roboto; font-style: normal; font-weight: normal; src: local('Robo'), url('fonts/Roboto.woff2') format('woff2'), url('fonts/Roboto.ttf') format('truetype');}
@keyframes keyframe_w18mkj { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.button_1dmte4q {margin: 0px !important; padding: 6px 12px !important; border: 1px solid #2e6da4 !important; border-radius: 4px !important; display: inline-block !important; cursor: pointer !important; font-weight: normal !important; line-height: normal !important; white-space: nowrap !important; text-decoration: none !important; text-align: left !important; background-color: #337ab7 !important; vertical-align: middle !important; color: rgba(0, 0, 0, 0) !important; -webkit-animation-duration: .3s !important; animation-duration: .3s !important; font-family: \\"Roboto\\" !important; -webkit-animation-name: keyframe_w18mkj !important; animation-name: keyframe_w18mkj !important;}
.button_1dmte4q:hover {background-color: #286090 !important; border-color: #204d74 !important;}
.button_1dmte4q::before {content: \\"★\\" !important; display: inline-block !important; vertical-align: middle !important; margin-right: 5px !important;}
@media (max-width: 600px) {.button_1dmte4q {padding: 4px 8px !important;}}"
`;

exports[`AphroditeAdapter LTR style sheet converts unified syntax to native syntax and transforms to a class name 2`] = `"button_1dmte4q"`;

exports[`AphroditeAdapter LTR style sheet flushes and purges all styles from the DOM 1`] = `".test_uhlm2 {display: block !important;}"`;

exports[`AphroditeAdapter LTR style sheet flushes and purges all styles from the DOM 2`] = `"test_uhlm2"`;

exports[`AphroditeAdapter LTR style sheet flushes and purges all styles from the DOM 3`] = `".test_uhlm2 {display: block !important;}"`;

exports[`AphroditeAdapter LTR style sheet handles @media 1`] = `
".media_1jcccqt {color: red !important; padding-left: 10px !important;}
@media (min-width: 300px) {.media_1jcccqt {color: blue !important; padding-left: 15px !important;}}
@media (max-width: 1000px) {.media_1jcccqt {color: green !important; padding-left: 20px !important;}}"
`;

exports[`AphroditeAdapter LTR style sheet handles @media 2`] = `"media_1jcccqt"`;

exports[`AphroditeAdapter LTR style sheet handles attribute selectors 1`] = `
".attr_424cv8 {display: block !important;}
.attr_424cv8[disabled] {opacity: 0.5 !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles attribute selectors 2`] = `"attr_424cv8"`;

exports[`AphroditeAdapter LTR style sheet handles descendant selectors 1`] = `
".list_1lo5lhe {margin: 0px !important; padding: 0px !important;}
.list_1lo5lhe > li {list-style: bullet !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles descendant selectors 2`] = `"list_1lo5lhe"`;

exports[`AphroditeAdapter LTR style sheet handles inline @font-face 1`] = `
"@font-face {font-family: Circular; font-style: normal; font-weight: normal; src: url('fonts/Circular.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: italic; font-weight: normal; src: url('fonts/Circular-Italic.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: normal; font-weight: 300; src: url('fonts/Circular-Light.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: normal; font-weight: 700; src: url('fonts/Circular-Bold.woff2') format('woff2');}
@font-face {font-family: Roboto; font-style: normal; font-weight: normal; src: local('Robo'), url('fonts/Roboto.woff2') format('woff2'), url('fonts/Roboto.ttf') format('truetype');}
.single_vfwy7z-o_O-multiple_17z04zp {font-family: \\"Circular\\",OtherFont,\\"Roboto\\" !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles inline @font-face 2`] = `"single_vfwy7z-o_O-multiple_17z04zp"`;

exports[`AphroditeAdapter LTR style sheet handles inline @keyframes 1`] = `
"@keyframes keyframe_1yeejfi { 
  0% {left: 0%;} 
  50% {left: 50%;} 
  100% {left: 100%;} 
}
@keyframes keyframe_w18mkj { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.single_zl2yc5-o_O-multiple_1r8o3nf {-webkit-animation-name: keyframe_1yeejfi,unknown,keyframe_w18mkj !important; animation-name: keyframe_1yeejfi,unknown,keyframe_w18mkj !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles inline @keyframes 2`] = `"single_zl2yc5-o_O-multiple_1r8o3nf"`;

exports[`AphroditeAdapter LTR style sheet handles multiple selectors (comma separated) 1`] = `
".multi_1xnvdcd {cursor: pointer !important;}
.multi_1xnvdcd:disabled {cursor: default !important;}
.multi_1xnvdcd[disabled] {cursor: default !important;}
.multi_1xnvdcd > span {cursor: default !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles multiple selectors (comma separated) 2`] = `"multi_1xnvdcd"`;

exports[`AphroditeAdapter LTR style sheet handles nested @media 1`] = `
".media_y3eou6 {color: red !important;}
@media (min-width: 300px) {.media_y3eou6 {color: blue !important;}@media (max-width: 1000px) {.media_y3eou6 {color: green !important;}}}"
`;

exports[`AphroditeAdapter LTR style sheet handles nested @media 2`] = `"media_y3eou6"`;

exports[`AphroditeAdapter LTR style sheet handles properties 1`] = `".props_n2jmqg {color: black !important; display: inline !important; margin-right: 10px !important; padding: 0px !important;}"`;

exports[`AphroditeAdapter LTR style sheet handles properties 2`] = `"props_n2jmqg"`;

exports[`AphroditeAdapter LTR style sheet handles pseudo selectors 1`] = `
".pseudo_q2zd6k {position: fixed !important;}
.pseudo_q2zd6k:hover {position: static !important;}
.pseudo_q2zd6k::before {position: absolute !important;}"
`;

exports[`AphroditeAdapter LTR style sheet handles pseudo selectors 2`] = `"pseudo_q2zd6k"`;

exports[`AphroditeAdapter LTR style sheet handles raw CSS 1`] = `
".aphrodite-button {display: 'block'; font-size: 16px; text-align: 'left';}
.aphrodite-button:hover {color: 'red';}
.aphrodite-button {vertical-align: 'middle';}
@media (max-width:600px) {.aphrodite-button {display: 'none';}}
@supports (display:-webkit-box) or (display:-webkit-flex) or (display:-ms-flexbox) or (display:flex) {.aphrodite-button {display: 'flex';}}"
`;

exports[`AphroditeAdapter LTR style sheet handles raw CSS 2`] = `""`;

exports[`AphroditeAdapter RTL global sheet flushes and purges global styles from the DOM 1`] = `
"body {margin: 0px !important;}
html {height: 100% !important;}
a {color: red !important;}
a:hover {color: darkred !important;}
a:focus {color: lightred !important;}
ul {margin: 0px !important;}
ul > li {margin: 0px !important;}
@media (max-width: 500px) {ul {margin: 20px !important;}}"
`;

exports[`AphroditeAdapter RTL global sheet flushes and purges global styles from the DOM 2`] = `"globals_5ijnvn"`;

exports[`AphroditeAdapter RTL global sheet flushes and purges global styles from the DOM 3`] = `""`;

exports[`AphroditeAdapter RTL style sheet converts unified syntax to native syntax and transforms to a class name 1`] = `
"@font-face {font-family: Roboto; font-style: normal; font-weight: normal; src: local('Robo'), url('fonts/Roboto.woff2') format('woff2'), url('fonts/Roboto.ttf') format('truetype');}
@keyframes keyframe_w18mkj { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.button_pvvr1m {margin: 0px !important; padding: 6px 12px !important; border: 1px solid #2e6da4 !important; border-radius: 4px !important; display: inline-block !important; cursor: pointer !important; font-weight: normal !important; line-height: normal !important; white-space: nowrap !important; text-decoration: none !important; text-align: right !important; background-color: #337ab7 !important; vertical-align: middle !important; color: rgba(0, 0, 0, 0) !important; -webkit-animation-duration: .3s !important; animation-duration: .3s !important; font-family: \\"Roboto\\" !important; -webkit-animation-name: keyframe_w18mkj !important; animation-name: keyframe_w18mkj !important;}
.button_pvvr1m:hover {background-color: #286090 !important; border-color: #204d74 !important;}
.button_pvvr1m::before {content: \\"★\\" !important; display: inline-block !important; vertical-align: middle !important; margin-left: 5px !important;}
@media (max-width: 600px) {.button_pvvr1m {padding: 4px 8px !important;}}"
`;

exports[`AphroditeAdapter RTL style sheet converts unified syntax to native syntax and transforms to a class name 2`] = `"button_pvvr1m"`;

exports[`AphroditeAdapter RTL style sheet flushes and purges all styles from the DOM 1`] = `".test_uhlm2 {display: block !important;}"`;

exports[`AphroditeAdapter RTL style sheet flushes and purges all styles from the DOM 2`] = `"test_uhlm2"`;

exports[`AphroditeAdapter RTL style sheet flushes and purges all styles from the DOM 3`] = `".test_uhlm2 {display: block !important;}"`;

exports[`AphroditeAdapter RTL style sheet handles @media 1`] = `
".media_1xdaj1a {color: red !important; padding-right: 10px !important;}
@media (min-width: 300px) {.media_1xdaj1a {color: blue !important; padding-right: 15px !important;}}
@media (max-width: 1000px) {.media_1xdaj1a {color: green !important; padding-right: 20px !important;}}"
`;

exports[`AphroditeAdapter RTL style sheet handles @media 2`] = `"media_1xdaj1a"`;

exports[`AphroditeAdapter RTL style sheet handles attribute selectors 1`] = `
".attr_424cv8 {display: block !important;}
.attr_424cv8[disabled] {opacity: 0.5 !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles attribute selectors 2`] = `"attr_424cv8"`;

exports[`AphroditeAdapter RTL style sheet handles descendant selectors 1`] = `
".list_1lo5lhe {margin: 0px !important; padding: 0px !important;}
.list_1lo5lhe > li {list-style: bullet !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles descendant selectors 2`] = `"list_1lo5lhe"`;

exports[`AphroditeAdapter RTL style sheet handles inline @font-face 1`] = `
"@font-face {font-family: Circular; font-style: normal; font-weight: normal; src: url('fonts/Circular.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: italic; font-weight: normal; src: url('fonts/Circular-Italic.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: normal; font-weight: 300; src: url('fonts/Circular-Light.woff2') format('woff2');}
@font-face {font-family: Circular; font-style: normal; font-weight: 700; src: url('fonts/Circular-Bold.woff2') format('woff2');}
@font-face {font-family: Roboto; font-style: normal; font-weight: normal; src: local('Robo'), url('fonts/Roboto.woff2') format('woff2'), url('fonts/Roboto.ttf') format('truetype');}
.single_vfwy7z-o_O-multiple_17z04zp {font-family: \\"Circular\\",OtherFont,\\"Roboto\\" !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles inline @font-face 2`] = `"single_vfwy7z-o_O-multiple_17z04zp"`;

exports[`AphroditeAdapter RTL style sheet handles inline @keyframes 1`] = `
"@keyframes keyframe_14nendx { 
  0% {right: 0%;} 
  50% {right: 50%;} 
  100% {right: 100%;} 
}
@keyframes keyframe_w18mkj { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.single_7ive5q-o_O-multiple_ysjk3k {-webkit-animation-name: keyframe_14nendx,unknown,keyframe_w18mkj !important; animation-name: keyframe_14nendx,unknown,keyframe_w18mkj !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles inline @keyframes 2`] = `"single_7ive5q-o_O-multiple_ysjk3k"`;

exports[`AphroditeAdapter RTL style sheet handles multiple selectors (comma separated) 1`] = `
".multi_1xnvdcd {cursor: pointer !important;}
.multi_1xnvdcd:disabled {cursor: default !important;}
.multi_1xnvdcd[disabled] {cursor: default !important;}
.multi_1xnvdcd > span {cursor: default !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles multiple selectors (comma separated) 2`] = `"multi_1xnvdcd"`;

exports[`AphroditeAdapter RTL style sheet handles nested @media 1`] = `
".media_y3eou6 {color: red !important;}
@media (min-width: 300px) {.media_y3eou6 {color: blue !important;}@media (max-width: 1000px) {.media_y3eou6 {color: green !important;}}}"
`;

exports[`AphroditeAdapter RTL style sheet handles nested @media 2`] = `"media_y3eou6"`;

exports[`AphroditeAdapter RTL style sheet handles properties 1`] = `".props_1k579qb {color: black !important; display: inline !important; margin-left: 10px !important; padding: 0px !important;}"`;

exports[`AphroditeAdapter RTL style sheet handles properties 2`] = `"props_1k579qb"`;

exports[`AphroditeAdapter RTL style sheet handles pseudo selectors 1`] = `
".pseudo_q2zd6k {position: fixed !important;}
.pseudo_q2zd6k:hover {position: static !important;}
.pseudo_q2zd6k::before {position: absolute !important;}"
`;

exports[`AphroditeAdapter RTL style sheet handles pseudo selectors 2`] = `"pseudo_q2zd6k"`;

exports[`AphroditeAdapter RTL style sheet handles raw CSS 1`] = `
".aphrodite-button {display: 'block'; font-size: 16px; text-align: 'right';}
.aphrodite-button:hover {color: 'red';}
.aphrodite-button {vertical-align: 'middle';}
@media (max-width:600px) {.aphrodite-button {display: 'none';}}
@supports (display:-webkit-box) or (display:-webkit-flex) or (display:-ms-flexbox) or (display:flex) {.aphrodite-button {display: 'flex';}}"
`;

exports[`AphroditeAdapter RTL style sheet handles raw CSS 2`] = `""`;
